k8s/usuarios-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuarios
spec:
  replicas: 2
  selector:
    matchLabels:
      app: usuarios
  template:
    metadata:
      labels:
        app: usuarios
    spec:
      containers:
      - name: usuarios
        image: 528961352146.dkr.ecr.us-east-1.amazonaws.com/usuario_microgo:admin
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
