k8s/usuarios-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usuarios-service
spec:
  type: LoadBalancer
  selector:
    app: usuarios
  ports:
    - port: 80
      targetPort: 8080
