k8s/usuarios-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usuarios-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:528961352146:certificate/2c0b7153-1a0a-4e22-aaf0-330fc6734cad
spec:
  ingressClassName: alb
  rules:
  - host: usuario.sw2ficct.lat
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: usuarios-service
            port:
              number: 80
